# Voxela

./: CMakeLists.txt  LICENSE  README.md
includes/glad/: glad.h
includes/lib/: block.h  camera.h  chunk.h  chunk_manager.h  compute_shader.h  gl_errors.h  mesh.h  noise_map.h  shaders.h
src/: glad.c  main.cpp
src/graphics/: gl_errors.cpp  mesh.cpp
src/shaders/: noise.cs.glsl  noise.fs.glsl  noise.vs.glsl  screen_shader.fs.glsl  screen_shader.vs.glsl
src/world/: block.cpp  chunk.cpp  chunk_manager.cpp  noise_map.cpp
